--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,11 @@ services:
   web:
     build: .
     restart: always
-    command: bash -c "python manage.py migrate 
-      && python manage.py runserver 0.0.0.0:8000"
+    command: > 
+      bash -c "
+      python manage.py migrate 
+      && python manage.py runserver 0.0.0.0:8000
+      "
     env_file:
       - .env
     ports:
